<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B8419"
    android:orientation="vertical"
    tools:context=".PokerActivity">

    <include
        layout="@layout/action_bar"
        android:id="@+id/action_bar" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintDimensionRatio="137:187"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar"
        app:srcCompat="@drawable/card0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintDimensionRatio="137:187"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:layout_constraintTop_toBottomOf="@+id/action_bar"
        app:srcCompat="@drawable/card0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintDimensionRatio="137:187"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/action_bar"
        app:srcCompat="@drawable/card0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintDimensionRatio="137:187"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/action_bar"
        app:srcCompat="@drawable/card0" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintDimensionRatio="137:187"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/action_bar"
        app:srcCompat="@drawable/card0" />

    <TextView
        android:id="@+id/payoutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/payout"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ListView
        android:id="@+id/payout_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:defaultFocusHighlightEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/betButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payoutLabel" />

    <Button
        android:id="@+id/betButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/game_button"
        android:text="@string/bet1"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/betButton2"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onClickBet"/>

    <Button
        android:id="@+id/betButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/game_button"
        android:text="@string/bet5"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/betButton1"
        app:layout_constraintEnd_toStartOf="@+id/betButton3"
        app:layout_constraintStart_toEndOf="@+id/betButton1"
        android:onClick="onClickBet"/>

    <Button
        android:id="@+id/betButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/game_button"
        android:text="@string/bet10"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/betButton2"
        app:layout_constraintEnd_toStartOf="@+id/betButton4"
        app:layout_constraintStart_toEndOf="@+id/betButton2"
        android:onClick="onClickBet"/>

    <Button
        android:id="@+id/betButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/game_button"
        android:text="@string/bet50"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/betButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/betButton3"
        android:onClick="onClickBet"/>

    <TextView
        android:id="@+id/betLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="35dp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/betLabel"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar" />

    <TextView
        android:id="@+id/creditLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/creditLabel"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar" />

    <TextView
        android:id="@+id/jackpotLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/jackpot"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/betLabel"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/winLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="40sp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView1"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        android:gravity="center_horizontal" />


</androidx.constraintlayout.widget.ConstraintLayout>